fixed alignment and repeating of you-died.png

--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -24,6 +24,8 @@ body
     border-style: solid;
     border-radius: 10px;
     background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
     background-image: url(../images/you-died.png),
                        url(../images/background-home.png);
 }
